--- a/com/zoom/index.html
+++ b/com/zoom/index.html
@@ -2051,13 +2051,14 @@ html,body,div,span,applet,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,a,abb
     }
     </script>
     <script>
-
-        var urlParams = new URLSearchParams(window.location.search);
-        var urlParam = urlParams.get('page');
-        elements.forEach(function(curr, i) {
-            if(curr.id === urlParam){
-                initStep = i;
-            };
-        });
+        try{
+            var urlParams = new URLSearchParams(window.location.search);
+            var urlParam = urlParams.get('page');
+            elements.forEach(function(curr, i) {
+                if(curr.id === urlParam){
+                    initStep = i;
+                };
+            });
+        }catch(e){};
     </script>
 </html>
