--- a/com/zoom/index.html
+++ b/com/zoom/index.html
@@ -968,9 +968,7 @@ html,body,div,span,applet,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,a,abb
         }
 
         window.onload = function(e) {
-            try{
-                var IEtest = () => {};
-            }catch(e){
+            if (window.document.documentMode) {
                 document.getElementById("home_browser_text").style.display = 'block';
                 document.getElementById("home_card").style.height = 'calc(100% - 100px - 30px - 50px)';
                 document.getElementById('home').style.visibility = 'visible';
