--- a/com/zoom/index.html
+++ b/com/zoom/index.html
@@ -263,6 +263,7 @@ html,body,div,span,applet,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,a,abb
             line-height: 1.4;
         }
         #home {
+            visibility: hidden;
             position: absolute;
             width: 100%;
             height: 100%;
@@ -2057,6 +2058,9 @@ html,body,div,span,applet,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,a,abb
     }catch(e){
 
     }
+    </script>
+    <script>
+        document.getElementById('home').style.visibility = 'visible';
     </script>
     <script>
         try{
