--- a/com/zoom/index.html
+++ b/com/zoom/index.html
@@ -880,12 +880,23 @@ html,body,div,span,applet,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,a,abb
                       desc: 'A leguruló tárgyak elkerülése érdekében az asztallap sullyesztett, peremet képezve az aztal teljes körvonalán.',
                   },
                   {
+                        id: 'csatlakozo',
+                        title: 'Univerzális csatlakozó',
+                        pos: {x:-439, y:-121},
+                        desc: 'A robot platform minden eleme rendelkezik ezzel a csatlakozóval: ezen keresztül tudják tölteni akkumulátoraikat és rögzíteni magukat egymáshoz.',
+                  },
+                  {
                       id: 'kontrol',
                       title: 'Magasság állítása',
-                      pos: {x:-510, y:-261},
+                      pos: {x:-511, y:-265},
                       desc: 'Az asztal beállításáért egy kisebb elektromos motor felelős a taróoszlopba építve. Manuális irányítógombokat is találunk burkolatán.',
                   },
-
+                  {
+                      id: 'erzekelok',
+                      title: 'Szenzorok',
+                      pos: {x:-532, y:-585},
+                      desc: 'Az asztal beállításáért egy kisebb elektromos motor felelős a taróoszlopba építve. Manuális irányítógombokat is találunk burkolatán.',
+                  },
                 ],
             },
             {
