--- a/com/zoom/index.html
+++ b/com/zoom/index.html
@@ -895,7 +895,7 @@ html,body,div,span,applet,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,a,abb
                       id: 'erzekelok',
                       title: 'Szenzorok',
                       pos: {x:-532, y:-585},
-                      desc: 'Az asztal beállításáért egy kisebb elektromos motor felelős a taróoszlopba építve. Manuális irányítógombokat is találunk burkolatán.',
+                      desc: 'Optikai szenzorok segítségével a munkaasztal folyamatosan nyomon követi a dolgozók pozícióját és mindig úgy helyezkedik, hogy a legkényelmesebb hozzáférést biztosítsa az alkatrészekhez és az érintőképernyőhöz.',
                   },
                 ],
             },
