--- a/com/zoom/index.html
+++ b/com/zoom/index.html
@@ -1036,7 +1036,7 @@
                 if(!clicked && !isHover){
                     hideDetails();
                 }
-                if(isHover && !hover){
+                if(isHover && hover < 0){
                     hoverItem(-1);
                 }
             }
@@ -1214,7 +1214,6 @@ html,body,div,span,applet,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,a,abb
             border-top-left-radius: 3px;
             user-select: none;
             pointer-events: none;
-            overflow: hidden;
         }
         .dot .text {
             position: absolute;
@@ -1226,11 +1225,14 @@ html,body,div,span,applet,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,a,abb
             line-height: 30px;
             letter-spacing: -0.08em;
             margin-left: -0.16px;
+            overflow: hidden;
         }
         .dot .back {
             position: absolute;
             width: 100%;
             height: 100%;
+            border-radius: 50%;
+            border-top-left-radius: 3px;
             background: #b51c14;
             transition: background-color 0.4s cubic-bezier(0.4, 0, 0.2, 1);
         }
