--- a/audi/index.html
+++ b/audi/index.html
@@ -164,7 +164,7 @@
                   id: 'rudacskak',
                   title: 'Nanoszerkezetű rudacskák',
                   pos: {x:216, y:-380},
-                  desc: 'A VR kontroller ravaszának enyhe meghúzására a rudacska mátrix kicsúszik a fejből, hogy letapogassa a hozzáérintett elemet (pl.: csavart). Amint a felhasználó jobban behúzza a ravaszt, a fej forgásközéppontba kerül, és a ravasz húzásának erősségével elkezdi forgatni a teljes fejet.',
+                  desc: 'A VR kontroller ravaszának enyhe meghúzására a rudacska mátrix kicsúszik a fejből, hogy letapogassa a hozzáérintett elemet (pl.: csavart).<br><br>Amint a felhasználó jobban behúzza a ravaszt, a fej forgásközéppontba kerül, és a ravasz húzásának erősségével elkezdi forgatni a teljes fejet.',
               },
               {
                   id: 'tok',
@@ -204,7 +204,7 @@
               },
               {
                   id: 'csapolas',
-                  title: 'Autómatikus csapolás felismerés',
+                  title: 'Automatikus csapolás felismerés',
                   pos: {x:-784, y:765},
                   desc: 'Azoknál az elemeknél (pl.: tengely), amelyeknél fontos a forgatás iránya, a fej automatikusan a csapolás vagy jelölés irányába fordul, és kijelzi az eltérés éppen aktuális szögét.',
               },
@@ -230,7 +230,7 @@
                   id: 'kontroller',
                   title: 'A virtuális tárgy illesztése a kontroller formájára',
                   pos: {x:775, y:622},
-                  desc: 'A csavarkulcs formája tökéletesen illeszkedik a valós, kézben tartott kontrollerére.<br><br>Például a ravasz pozíciója, a nyél dőlésszöge, vagy hogy pont ott érjen véget a virtuális fej ahol fizikai kontroller.',
+                  desc: 'A csavarkulcs formája tökéletesen illeszkedik a valós, kézben tartott kontrollerére.<br><br>Például a ravasz pozíciója, a nyél dőlésszöge vagy, hogy pont ott ér véget a virtuális csavarhúzófej, ahol a fizikai kontroller.',
               },
             ]
         },
@@ -399,7 +399,7 @@
                   id: 'karok',
                   title: 'Feszítőkarok',
                   pos: {x:618, y:-477},
-                  desc: 'Mielőtt a szíjszerelő robot csatlakozna a <a href="'+url+'?page=platform'+'">motorállványhoz</a>, tárcsái egy előre programozott pozícióba for- dulnak és karjai a tartott ékszíj csatlakozási pontjaiba pozícionálják magukat.',
+                  desc: 'Mielőtt a szíjszerelő robot csatlakozna a <a href="'+url+'?page=motorallvany'+'">motorállványhoz</a>, tárcsái egy előre programozott pozícióba for- dulnak és karjai a tartott ékszíj csatlakozási pontjaiba pozícionálják magukat.',
               },
               {
                   id: 'teleszkop',
@@ -469,7 +469,7 @@
                   id: 'robot',
                   title: 'Precíziós forgatókar, cloud irányítással',
                   pos: {x:-560, y:-490},
-                  desc: 'Teljes egészében követi a <a href="'+url+'?page=beallitomuszer'+'">precíziós forgatókar</a> működési mechanizmusát, azzal a kivétellel hogy manuális irányító panel helyett egy extra kommunikációs egység van a robotkarra csatolva, és azon keresztül irányítja a központi rendszer.<br><br>A teszteredmények az alkatrésztálcába épitett kijelzőn es az AR szemüvegen keresztül követhetők nyomon.',
+                  desc: 'Teljes egészében követi a <a href="'+url+'?page=beallitomuszer'+'">Beállítóműszer</a> működési mechanizmusát, azzal a kivétellel hogy manuális irányító panel helyett egy extra kommunikációs egység van a robotkarra csatolva, és azon keresztül irányítja a központi rendszer.<br><br>A teszteredmények az alkatrésztálcába épitett kijelzőn es az AR szemüvegen keresztül követhetők nyomon.',
               },
             ],
         },
