--- a/audi/index.html
+++ b/audi/index.html
@@ -1235,8 +1235,10 @@ html,body,div,span,applet,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,a,abb
             font-size: 14px;
             line-height: 30px;
             letter-spacing: -0.08em;
-            margin-left: -0.16px;
+            margin-left: -1px;
+            margin-top: 0;
             overflow: hidden;
+            pointer-events: none;
         }
         .dot .back {
             position: absolute;
