--- a/audi/index.html
+++ b/audi/index.html
@@ -1235,8 +1235,7 @@ html,body,div,span,applet,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,a,abb
             font-size: 14px;
             line-height: 30px;
             letter-spacing: -0.08em;
-            margin-left: -1px;
-            margin-top: 0;
+            margin-left: -0.05em;
             overflow: hidden;
             pointer-events: none;
         }
