--- a/audi/index.html
+++ b/audi/index.html
@@ -1218,6 +1218,8 @@ html,body,div,span,applet,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,a,abb
         }
         .dot {
             position: absolute;
+            left:0;
+            top:0;
             width: 28px;
             height: 28px;
             background-color: #b51c14;
@@ -1228,14 +1230,16 @@ html,body,div,span,applet,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,a,abb
         }
         .dot .text {
             position: absolute;
+            left: 0;
+            top: 0;
             width: 100%;
             height: 100%;
             text-align: center;
             color: white;
             font-size: 14px;
-            line-height: 30px;
+            margin-left: -0.04em;
+            line-height: 2.143em;
             letter-spacing: -0.08em;
-            margin-left: -0.05em;
             overflow: hidden;
             pointer-events: none;
         }
