--- a/audi/index.html
+++ b/audi/index.html
@@ -1586,20 +1586,26 @@ html,body,div,span,applet,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,a,abb
     <div class="buttons" id="buttons_top">
         <div class="buttons_wrapper">
             <div class="button" id="plus">
-                <svg class="centered" width="14" height="14" x="0px" y="0px"
-                viewBox="0 0 459.3 459.3" >
-                    <g>
-                        <path d="M459.3,229.7c0,22.2-18,40.2-40.2,40.2H269.9v149.3c0,22.2-18,40.2-40.2,40.2c-11.1,0-21.1-4.5-28.4-11.8
-                            c-7.3-7.3-11.8-17.3-11.8-28.4l0-149.3H40.2c-11.1,0-21.1-4.5-28.4-11.8C4.5,250.8,0,240.8,0,229.7c0-22.2,18-40.2,40.2-40.2h149.3
-                            V40.2c0-22.2,18-40.2,40.2-40.2c22.2,0,40.2,18,40.2,40.2v149.3h149.3C441.3,189.5,459.3,207.5,459.3,229.7z"/>
-                    </g>
+                <svg class="centered" width="20" height="20" x="0px" y="0px"
+                    viewBox="0 0 14 14">
+                    <path d="M13.222,11.712l-2.559-2.558c0.599-0.887,0.949-1.956,0.949-3.108c0-3.07-2.489-5.559-5.559-5.559
+                        c-3.07,0-5.559,2.489-5.559,5.559c0,3.07,2.489,5.559,5.559,5.559c1.143,0,2.205-0.346,3.089-0.938l2.562,2.562
+                        c0.189,0.189,0.438,0.283,0.686,0.283v-0.001c0.249,0,0.498-0.094,0.686-0.283l0.144-0.144c0.189-0.189,0.283-0.438,0.283-0.686
+                        C13.505,12.15,13.411,11.901,13.222,11.712z M8.47,6.663H6.671v1.799c0,0.34-0.277,0.617-0.617,0.617
+                        c-0.165,0-0.32-0.064-0.436-0.181C5.501,8.783,5.437,8.628,5.437,8.463V6.663H3.637c-0.165,0-0.32-0.065-0.436-0.182
+                        C3.085,6.366,3.02,6.211,3.02,6.046c0-0.34,0.277-0.617,0.617-0.617h1.799V3.63c0-0.341,0.277-0.617,0.617-0.617
+                        c0.34,0,0.617,0.277,0.617,0.617v1.799h1.799c0.34,0,0.616,0.277,0.616,0.617C9.087,6.387,8.81,6.663,8.47,6.663z"/>
                 </svg>
             </div>
             <div class="button" id="minus">
-                <svg class="centered" width="14" height="14" x="0px" y="0px"
-                viewBox="0 0 459.3 459.3" >
-                    <path d="M419.1,189.5H40.2C18,189.5,0,207.5,0,229.7c0,11.1,4.5,21.1,11.8,28.4c7.3,7.3,17.3,11.8,28.4,11.8h379
-                    c22.2,0,40.2-18,40.2-40.2C459.3,207.5,441.3,189.5,419.1,189.5z"/>
+                <svg class="centered" width="20" height="20" x="0px" y="0px"
+                    viewBox="0 0 14 14">
+                    <path d="M13.219,11.712l-2.556-2.557c0.6-0.887,0.95-1.957,0.95-3.109c0-3.07-2.489-5.559-5.559-5.559
+                        c-3.07,0-5.559,2.489-5.559,5.559c0,3.07,2.489,5.559,5.559,5.559c1.143,0,2.204-0.346,3.088-0.937l2.561,2.561
+                        c0.189,0.189,0.438,0.283,0.686,0.283v-0.001c0.249,0,0.498-0.094,0.686-0.283l0.144-0.144c0.189-0.189,0.283-0.438,0.283-0.686
+                        C13.502,12.149,13.408,11.9,13.219,11.712z M8.468,6.663H6.671H5.437h-1.8c-0.165,0-0.32-0.065-0.436-0.182
+                        C3.085,6.366,3.02,6.211,3.02,6.046c0-0.34,0.277-0.617,0.617-0.617h1.799H6.67h1.799c0.34,0,0.616,0.277,0.616,0.617
+                        C9.085,6.387,8.808,6.663,8.468,6.663z"/>
                 </svg>
             </div>
         </div>
