--- a/audi/index.html
+++ b/audi/index.html
@@ -90,13 +90,13 @@
                     id: 'asztal',
                     title: 'Intelligens alkatrésztálca',
                     pos: {x:660, y:226},
-                     desc: 'Az asztal a jövő munkahelyének "idegközpontja": az alkatrészek tárolásán kívül az asztal felületén elhelyezett érintőképernyőn nyomon követhetjük a szerelési folyamatot, utasításokat kaphatunk és adhatunk a műveletekhez kapcsolódóan.<br><br>Mint a platform minden eleme, szintén automatikusan alkalmazkodik a felhasználóhoz és a mozgását biztosító kondukciós hajtómű is ugyanolyan elven működik, mint a többi gyártásban résztvevő roboté.',
+                     desc: 'Az asztal a jövő munkahelyének "idegközpontja": az alkatrészek tárolásán kívül az asztal felületén elhelyezett érintőképernyőn nyomon követhetjük a szerelési folyamatot, utasításokat kaphatunk és adhatunk a műveletekhez kapcsolódóan.<br><br>Mint a platform minden eleme, szintén automatikusan alkalmazkodik a felhasználóhoz és a mozgását biztosító indukciós hajtómű is ugyanolyan elven működik, mint a többi gyártásban résztvevő roboté.',
                 },
                 {
                     id: 'terulet',
                     title: 'Mozgásterületek',
                     pos: {x:360, y:232},
-                    desc: 'A robotok a számukra kijelölt sárga felfestésen közlekednek, az emberek pedig a sárga csíkkal körülhatárolt területen belül mozoghatnak csak. A szerelés elvégzéséhez szükséges közös zónába (narancssárga körcikkel jelölve) mind a gépek, mind az emberek bemehetnek, különleges körültekintéssel mozogva ott.<br><br>A szerelőcsarnok teljes területe alkalmas a kondukciós mozgásra, de az alkatrésztálcán kívül más robot nem közlekedik a kijelölt területeken kívül. Az alkatrésztálca saját szenzorjaival biztosítja az ütközések el- kerülését.'
+                    desc: 'A robotok a számukra kijelölt sárga felfestésen közlekednek, az emberek pedig a sárga csíkkal körülhatárolt területen belül mozoghatnak csak. A szerelés elvégzéséhez szükséges közös zónába (narancssárga körcikkel jelölve) mind a gépek, mind az emberek bemehetnek, különleges körültekintéssel mozogva ott.<br><br>A szerelőcsarnok teljes területe alkalmas a indukciós mozgásra, de az alkatrésztálcán kívül más robot nem közlekedik a kijelölt területeken kívül. Az alkatrésztálca saját szenzorjaival biztosítja az ütközések el- kerülését.'
                 },
                 {
                     id: 'small_robot',
