--- a/audi/index.html
+++ b/audi/index.html
@@ -244,7 +244,7 @@
                     id: 'meghajtas',
                     title: 'Platform meghajtás',
                     pos: {x:983, y:-161},
-                    desc: 'Az üzem teljes területe enyhén negatív töltésű fémmel borított. Ez teszi lehetővé (koncentrált elektromágneses pólusváltással) a robotok stabilizálását vagy lebegését pár centiméterre a burkolt fémrétegtől.<br/><br>Az elektromágneseknek nagyobb energiát kell kifejteniük mozgásnál, mint stabilizálásnál, igy elindulásnál a robot megemeli az hajtóművek köralakú védőburkolatát a megfelelő léghűtés biztosítására - mind a négyet kisebb időeltolódással az elektromágnesek melegedésének ütemében.'
+                    desc: 'Az üzem teljes területe elektromágnesekkel borított. Ez teszi lehetővé (koncentrált elektromágneses pólusváltással) a robotok stabilizálását vagy lebegését pár centiméterre a burkolt fémrétegtől.<br/><br>Az elektromágneseknek nagyobb energiát kell kifejteniük mozgásnál, mint stabilizálásnál, igy elindulásnál a robot megemeli az hajtóművek köralakú védőburkolatát a megfelelő léghűtés biztosítására - mind a négyet kisebb időeltolódással az elektromágnesek melegedésének ütemében.'
                 },
                 {
                     id: 'csatlakozo',
