--- a/audi/index.html
+++ b/audi/index.html
@@ -212,7 +212,7 @@
                   id: 'kijelzo',
                   title: 'Kijelző',
                   pos: {x:-593, y:765},
-                  desc: 'Információt kaphatunk az éppen felismert elemről vagy a forgatás nyomatékáról.<br><br>Tutoriál módban a kijelző érintésével lehet csavartípust váltani.<br><br>Probléma esetén pirosra vált a monokróm kijelző háttérvilágítása.',
+                  desc: 'Információt kaphatunk az éppen felismert elemről vagy a forgatás nyomatékáról.<br><br>Probléma esetén pirosra vált a monokróm kijelző háttérvilágítása.',
               },
               {
                   id: 'rovatka',
