--- a/com/elements/index.html
+++ b/com/elements/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8" />
     <title>Wheel</title>
     <link href="https://vjs.zencdn.net/7.8.2/video-js.css" rel="stylesheet" />
-
+    <meta name="viewport" content="user-scalable=no" />
     <script src="wheel/wheel.js"></script>
     <style type="text/css">
         body{
