--- a/com/elements/index.html
+++ b/com/elements/index.html
@@ -4,13 +4,13 @@
 <head>
     <meta charset="utf-8" />
     <title>Wheel</title>
-    <link href="https://vjs.zencdn.net/7.8.2/video-js.css" rel="stylesheet" />
     <meta name="viewport" content="user-scalable=no" />
     <script src="wheel/wheel.js"></script>
     <style type="text/css">
         body{
             background-color: #222222;
             -webkit-user-select: none;
+            -webkit-touch-callout: none;
         }
         .wheel{
             position: relative;
@@ -28,7 +28,6 @@
 <body>
     <div id="wheel" class="wheel">
     </div>
-    <script src="https://vjs.zencdn.net/7.8.2/video.js"></script>
 </body>
 
 
