--- a/com/elements/index.html
+++ b/com/elements/index.html
@@ -4,8 +4,7 @@
 <head>
     <meta charset="utf-8" />
     <title>Wheel</title>
-    <link href="https://vjs.zencdn.net/7.8.2/video-js.css" rel="stylesheet">
-    <meta name="viewport" content="user-scalable=no" />
+    <!--link href="https://vjs.zencdn.net/7.8.2/video-js.css" rel="stylesheet"-->
     <script src="wheel/wheel.js"></script>
     <style type="text/css">
         body{
@@ -27,7 +26,7 @@
 <body>
     <div id="wheel" class="wheel">
     </div>
-    <script src="https://vjs.zencdn.net/7.8.2/video.js"></script>
+    <!--script src="https://vjs.zencdn.net/7.8.2/video.js"></script-->
 </body>
 
 
