--- a/com/torula.art/art/enter_active/manual_hu.html
+++ b/com/torula.art/art/enter_active/manual_hu.html
@@ -20,7 +20,7 @@
         <div id='content'>
             <h3><span class="bold">1. Enter gomb, klikk a képen, sarok menü:</span> képszekvencia léptetése</h3>
             <h3><span class="bold">2. Jobb és bal nyil gomb, nyil navigáció:</span> mûvek közti váltás</h3>
-            <h3><span class="bold">3. Fel és le nyil, sarok menü:</span> zoomolás</h3>
+            <h3><span class="bold">3. Fel és le nyil gomb</span> képszekvencia elôre-hátra léptetése</h3>
             <h3><span class="bold">4. Space gomb, kattintás a logón:</span> Felhasználói felület elrejtése</h3>
             <h3><span class="bold">5. F gomb, sarok menü:</span> Teljes képernyô</h3>
             <h3><span class="bold">6. Esc gomb:</span> Teljes képernyô elhagyása</h3>
